Agrego cita sobre tipos Algebraicos de datos en Haskell

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,32 @@
+@inproceedings{10.1007/978-3-030-03427-6_27,
+  author    = {Lamela Seijas, Pablo
+               and Thompson, Simon},
+  editor    = {Margaria, Tiziana
+               and Steffen, Bernhard},
+  title     = {Marlowe: Financial Contracts on Blockchain},
+  booktitle = {Leveraging Applications of Formal Methods, Verification and Validation. Industrial Practice},
+  year      = {2018},
+  publisher = {Springer International Publishing},
+  address   = {Cham},
+  pages     = {356--375},
+  abstract  = {Blockchains allow the specification of contracts in the form of programs that guarantee their fulfilment. Nevertheless, errors in those programs can cause important, and often irretrievable, monetary loss. General-purpose languages provide a platform on which contracts can be built, but by their very generality they have the potential to exhibit behaviours of an unpredictable kind, and are also not easy to read or comprehend for general users.},
+  isbn      = {978-3-030-03427-6}
+}
+@inproceedings{10.1007/978-3-030-61467-6_11,
+  author    = {Lamela Seijas, Pablo
+               and Smith, David
+               and Thompson, Simon},
+  editor    = {Margaria, Tiziana
+               and Steffen, Bernhard},
+  title     = {Efficient Static Analysis of Marlowe Contracts},
+  booktitle = {Leveraging Applications of Formal Methods, Verification and Validation: Applications},
+  year      = {2020},
+  publisher = {Springer International Publishing},
+  address   = {Cham},
+  pages     = {161--177},
+  abstract  = {SMT solvers can verify properties automatically and efficiently, and they offer increasing flexibility on the ways those properties can be described. But it is hard to predict how those ways of describing the properties affect the computational cost of verifying them.},
+  isbn      = {978-3-030-61467-6}
+}
 @article{10.1145/3464421,
   author     = {Tolmach, Palina and Li, Yi and Lin, Shang-Wei and Liu, Yang and Li, Zengxiang},
   title      = {A Survey of Smart Contract Formal Specification and Verification},
@@ -26,6 +55,79 @@
   numpages   = {38},
   keywords   = {formal specification, Smart contract, properties, formal verification}
 }
+@inproceedings{9152791,
+  author    = {Permenev, Anton and Dimitrov, Dimitar and Tsankov, Petar and Drachsler-Cohen, Dana and Vechev, Martin},
+  booktitle = {2020 IEEE Symposium on Security and Privacy (SP)},
+  title     = {VerX: Safety Verification of Smart Contracts},
+  year      = {2020},
+  volume    = {},
+  number    = {},
+  pages     = {1661-1677},
+  doi       = {10.1109/SP40000.2020.00024}
+}
+@misc{ACTUS_Dictionary_Events,
+  author       = {ACTUS},
+  note         = {Online; accessed 17 April 2022},
+  year         = {2019},
+  month        = Aug,
+  title        = {ACTUS Dictionary Events},
+  howpublished = {\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-event-types.json}}
+}
+@misc{ACTUS_Dictionary_States,
+  author       = {ACTUS},
+  title        = {ACTUS Dictionary States},
+  year         = {2019},
+  month        = Jun,
+  howpublished = {\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-states.json}}
+}
+@misc{ACTUS_Dictionary_Terms,
+  author       = {ACTUS},
+  title        = {ACTUS Dictionary Terms},
+  year         = {2019},
+  month        = Jun,
+  howpublished = {\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-terms.json}}
+}
+@misc{ACTUS_Taxonomy,
+  author       = {ACTUS},
+  title        = {ACTUS Taxonomy},
+  year         = 2019,
+  month        = Jun,
+  howpublished = {\url{https://www.actusfrf.org/taxonomy}}
+}
+
+@misc{ACTUS_Techspecs,
+  author       = {ACTUS},
+  title        = {ACTUS Technical Specification},
+  year         = {2018},
+  month        = Nov,
+  howpublished = {\url{https://www.actusfrf.org/techspecs}}
+}
+@misc{Algebraic_data_type,
+  author       = {HaskellWiki},
+  note         = {Online; accessed 30 April 2022},
+  year         = {2020},
+  month        = May,
+  day          = 6,
+  time         = {12:07},
+  title        = {Algebraic data type},
+  howpublished = {\url{https://wiki.haskell.org/Algebraic_data_type}}
+}
+
+@inproceedings{bhargavan:hal-01400469,
+  title       = {{Formal Verification of Smart Contracts: Short Paper}},
+  author      = {Bhargavan, Karthikeyan and Delignat-Lavaud, Antoine and Fournet, C{\'e}dric and Gollamudi, Anitha and Gonthier, Georges and Kobeissi, Nadim and Kulatova, Natalia and Rastogi, Aseem and Sibut-Pinote, Thomas and Swamy, Nikhil and Zanella-B{\'e}guelin, Santiago},
+  url         = {https://hal.inria.fr/hal-01400469},
+  booktitle   = {{ACM Workshop on Programming Languages and Analysis for Security}},
+  address     = {Vienna, Austria},
+  year        = {2016},
+  month       = Oct,
+  doi         = {10.1145/2993600.2993611},
+  keywords    = {Cryptocurrencies ; Formal methods Computer science ; Formal verification},
+  pdf         = {https://hal.inria.fr/hal-01400469/file/solidether.pdf},
+  hal_id      = {hal-01400469},
+  hal_version = {v1}
+}
+
 @inproceedings{implementing_financial_contracts_on_blockchain,
   author    = {Lamela Seijas, Pablo
                and Nemish, Alexander
@@ -47,103 +149,27 @@
   abstract  = {Marlowe is a DSL for financial contracts. We describe the implementation of Marlowe on the Cardano blockchain, and the Marlowe Playground web-based development and simulation environment.},
   isbn      = {978-3-030-54455-3}
 }
-@inproceedings{10.1007/978-3-030-61467-6_11,
-  author    = {Lamela Seijas, Pablo
-               and Smith, David
-               and Thompson, Simon},
-  editor    = {Margaria, Tiziana
-               and Steffen, Bernhard},
-  title     = {Efficient Static Analysis of Marlowe Contracts},
-  booktitle = {Leveraging Applications of Formal Methods, Verification and Validation: Applications},
-  year      = {2020},
-  publisher = {Springer International Publishing},
-  address   = {Cham},
-  pages     = {161--177},
-  abstract  = {SMT solvers can verify properties automatically and efficiently, and they offer increasing flexibility on the ways those properties can be described. But it is hard to predict how those ways of describing the properties affect the computational cost of verifying them.},
-  isbn      = {978-3-030-61467-6}
-}
-@inproceedings{10.1007/978-3-030-03427-6_27,
-  author    = {Lamela Seijas, Pablo
-               and Thompson, Simon},
-  editor    = {Margaria, Tiziana
-               and Steffen, Bernhard},
-  title     = {Marlowe: Financial Contracts on Blockchain},
-  booktitle = {Leveraging Applications of Formal Methods, Verification and Validation. Industrial Practice},
-  year      = {2018},
-  publisher = {Springer International Publishing},
-  address   = {Cham},
-  pages     = {356--375},
-  abstract  = {Blockchains allow the specification of contracts in the form of programs that guarantee their fulfilment. Nevertheless, errors in those programs can cause important, and often irretrievable, monetary loss. General-purpose languages provide a platform on which contracts can be built, but by their very generality they have the potential to exhibit behaviours of an unpredictable kind, and are also not easy to read or comprehend for general users.},
-  isbn      = {978-3-030-03427-6}
-}
-@inproceedings{bhargavan:hal-01400469,
-  title       = {{Formal Verification of Smart Contracts: Short Paper}},
-  author      = {Bhargavan, Karthikeyan and Delignat-Lavaud, Antoine and Fournet, C{\'e}dric and Gollamudi, Anitha and Gonthier, Georges and Kobeissi, Nadim and Kulatova, Natalia and Rastogi, Aseem and Sibut-Pinote, Thomas and Swamy, Nikhil and Zanella-B{\'e}guelin, Santiago},
-  url         = {https://hal.inria.fr/hal-01400469},
-  booktitle   = {{ACM Workshop on Programming Languages and Analysis for Security}},
-  address     = {Vienna, Austria},
-  year        = {2016},
-  month       = Oct,
-  doi         = {10.1145/2993600.2993611},
-  keywords    = {Cryptocurrencies ; Formal methods Computer science ; Formal verification},
-  pdf         = {https://hal.inria.fr/hal-01400469/file/solidether.pdf},
-  hal_id      = {hal-01400469},
-  hal_version = {v1}
-}
-@inproceedings{9152791,
-  author    = {Permenev, Anton and Dimitrov, Dimitar and Tsankov, Petar and Drachsler-Cohen, Dana and Vechev, Martin},
-  booktitle = {2020 IEEE Symposium on Security and Privacy (SP)},
-  title     = {VerX: Safety Verification of Smart Contracts},
-  year      = {2020},
-  volume    = {},
-  number    = {},
-  pages     = {1661-1677},
-  doi       = {10.1109/SP40000.2020.00024}
-}
 @inproceedings{standardized_crypto_loans,
   title     = {Standardized crypto-loans on the Cardano blockchain},
   author    = {Kondratiuk, Dmytro and Seijas, Pablo Lamela and Nemish, Alexander and Thompson, Simon},
   booktitle = {5th Workshop on Trusted Smart Contracts, Financial Cryptography and Data Security 2021},
   year      = {2021}
 }
-@misc{ACTUS_Taxonomy,
-  author       = {ACTUS},
-  title        = {ACTUS Taxonomy},
-  year         = 2019,
-  month        = Jun,
-  howpublished = {\url{https://www.actusfrf.org/taxonomy}}
+@inbook{The_Extended_UTXO_Model,
+  author = {Chakravarty, Manuel and Chapman, James and MacKenzie, Kenneth and Melkonian, Orestis and Jones, Michael and Wadler, Philip},
+  year   = {2020},
+  month  = {08},
+  pages  = {525-539},
+  title  = {The Extended UTXO Model},
+  isbn   = {978-3-030-54454-6},
+  doi    = {10.1007/978-3-030-54455-3_37}
 }
-
-@misc{ACTUS_Techspecs,
-  author       = {ACTUS},
-  title        = {ACTUS Technical Specification},
+@misc{Translating_and_Unifying_UTXO-based,
+  author       = {Joachim Zahnentferner},
+  title        = {Chimeric Ledgers: Translating and Unifying UTXO-based and Account-based Cryptocurrencies},
+  howpublished = {Cryptology ePrint Archive, Report 2018/262},
   year         = {2018},
-  month        = Nov,
-  howpublished = {\url{https://www.actusfrf.org/techspecs}}
-}
-@misc{ACTUS_Dictionary_Terms,
-  author       = {ACTUS},
-  title        = {ACTUS Dictionary Terms},
-  year         = {2019},
-  month        = Jun,
-  howpublished = {\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-terms.json}}
-}
-
-@misc{ACTUS_Dictionary_States,
-  author       = {ACTUS},
-  title        = {ACTUS Dictionary States},
-  year         = {2019},
-  month        = Jun,
-  howpublished = {\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-states.json}}
-}
-
-@misc{ACTUS_Dictionary_Events,
-  author       = {ACTUS},
-  note         = {Online; accessed 17 April 2022},
-  year         = {2019},
-  month        = Aug,
-  title        = {ACTUS Dictionary Events},
-  howpublished = {\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-event-types.json}}
+  note         = {\url{https://ia.cr/2018/262}}
 }
 @article{UTxO,
   author     = {Lars Br{\"{u}}njes and
@@ -158,20 +184,4 @@
   timestamp  = {Thu, 02 Apr 2020 15:34:08 +0200},
   biburl     = {https://dblp.org/rec/journals/corr/abs-2003-14271.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
-}
-@misc{Translating_and_Unifying_UTXO-based,
-  author       = {Joachim Zahnentferner},
-  title        = {Chimeric Ledgers: Translating and Unifying UTXO-based and Account-based Cryptocurrencies},
-  howpublished = {Cryptology ePrint Archive, Report 2018/262},
-  year         = {2018},
-  note         = {\url{https://ia.cr/2018/262}}
-}
-@inbook{The_Extended_UTXO_Model,
-  author = {Chakravarty, Manuel and Chapman, James and MacKenzie, Kenneth and Melkonian, Orestis and Jones, Michael and Wadler, Philip},
-  year   = {2020},
-  month  = {08},
-  pages  = {525-539},
-  title  = {The Extended UTXO Model},
-  isbn   = {978-3-030-54454-6},
-  doi    = {10.1007/978-3-030-54455-3_37}
 }
