--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -94,7 +94,6 @@
   month        = Jun,
   howpublished = {\url{https://www.actusfrf.org/taxonomy}}
 }
-
 @misc{ACTUS_Techspecs,
   author       = {ACTUS},
   title        = {ACTUS Technical Specification},
@@ -127,7 +126,25 @@
   hal_id      = {hal-01400469},
   hal_version = {v1}
 }
+@misc{cardano_docs,
+  author       = {IOHK},
+  title        = {Documentation for the Cardano ecosystem},
+  year         = {2015},
+  howpublished = {\url{https://docs.cardano.org/}}
+}
 
+@article{cardano_utxo_ledger,
+  author = {Jared Corduan and Polina Vinogradova and Matthias Gudemann},
+  title  = {A {Formal} {Specification} of the {Cardano} {Ledger}},
+  url    = {http://cardano-universe.com/wp-content/uploads/2019/02/ledger-spec.pdf},
+  year   = {2019}
+}
+@misc{cardano_website,
+  author       = {Cardano},
+  title        = {Cardano Official Website},
+  year         = {2019},
+  howpublished = {\url{https://cardano.org/}}
+}
 @inproceedings{implementing_financial_contracts_on_blockchain,
   author    = {Lamela Seijas, Pablo
                and Nemish, Alexander
@@ -149,6 +166,14 @@
   abstract  = {Marlowe is a DSL for financial contracts. We describe the implementation of Marlowe on the Cardano blockchain, and the Marlowe Playground web-based development and simulation environment.},
   isbn      = {978-3-030-54455-3}
 }
+@misc{nakamoto2008bitcoin,
+  author = {Satoshi Nakamoto},
+  title  = {Bitcoin: A Peer-to-Peer Electronic Cash System},
+  year   = {2008},
+  month  = {Dec},
+  note   = {Accessed: 2015-07-01},
+  url    = {https://bitcoin.org/bitcoin.pdf}
+}
 @inproceedings{standardized_crypto_loans,
   title     = {Standardized crypto-loans on the Cardano blockchain},
   author    = {Kondratiuk, Dmytro and Seijas, Pablo Lamela and Nemish, Alexander and Thompson, Simon},
@@ -164,6 +189,7 @@
   isbn   = {978-3-030-54454-6},
   doi    = {10.1007/978-3-030-54455-3_37}
 }
+
 @misc{Translating_and_Unifying_UTXO-based,
   author       = {Joachim Zahnentferner},
   title        = {Chimeric Ledgers: Translating and Unifying UTXO-based and Account-based Cryptocurrencies},
@@ -171,6 +197,7 @@
   year         = {2018},
   note         = {\url{https://ia.cr/2018/262}}
 }
+
 @article{UTxO,
   author     = {Lars Br{\"{u}}njes and
                 Murdoch James Gabbay},
