--- a/propuesta/propuesta.tex
+++ b/propuesta/propuesta.tex
@@ -45,7 +45,7 @@
 \textit{Verificación de smart contracts en Marlowe\\ para la blockchain Cardano}}
 
 \author{
-             \textbf{Director:} Dr. Ing. Mariano G. Beiró \\
+             \textbf{Director:} Dr.\ Ing. Mariano G. Beiró \\
          \texttt{mbeiro@fi.uba.ar}\\[2.5ex]
              \textbf{Co-director:} Phd. Simon Thompson (Kent University, IOHK) \\
          \texttt{S.J.Thompson@kent.ac.uk}
@@ -69,7 +69,7 @@
 }
 
 %##########################
-% INTRODUCCION
+% INTRODUCCIÓN
 %##########################
 
 \section{Introducción}
@@ -86,7 +86,7 @@ En este trabajo nos proponemos estudiar la verificación a bajo nivel de un grup
 %Los contratos inteligentes de Cardano están escritos en un lenguaje llamado %\textit{Plutus Core}.
 Utilizaremos la plataforma \textit{Plutus}, que es un kit de desarrollo de software (SDK) integrado en Haskell, para que los desarrolladores puedan escribir contratos inteligentes para Cardano, incluida la lógica que eventualmente se ejecutará en la cadena de bloques. La ventaja detrás del enfoque de Plutus es la garantía de seguridad en general, y en particular en contratos inteligentes, debido al uso de programación funcional con sistemas de tipado avanzado. 
 
-El trabajo contará con la codirección del profesor Simon Thompson (Kent University, (\url{https://scholar.google.com/citations?user=twtKi84AAAAJ&hl=es})) quien se desempeña como Senior Research Fellow en IOHK, a cargo del desarrollo de Cardano, y se especializa en técnicas de verificación. Como parte del trabajo, se buscaran las propiedades a verificar sobre los contratos, algunas de ellas derivan directamente de la especificación formal definida por el estándar ACTUS\footnote{\href{https://www.actusfrf.org/techspecs}{https://www.actusfrf.org/techspecs}}, mientras que otras resultan mas abstractas o generales. Las pruebas se escribirán a través del asistente de pruebas Isabelle/HOL. Los contratos serán desarrollados en Marlowe (un lenguaje construído sobre Plutus) y también se integrarán al Marlowe Playground en la web, para permitir la generación automática del código Marlowe a partir de la definición de las condiciones de contrato. %Todo el código generado tendrá licencia de software libre Apache 2.0, mientras que los restantes componentes de la investigación (traducción de la especificación ACTUS a Marlowe, y las pruebas de verificación formal) quedarán publicadas en la tesis.
+El trabajo contará con la co-dirección del profesor Simon Thompson (Kent University, (\url{https://scholar.google.com/citations?user=twtKi84AAAAJ&hl=es})) quien se desempeña como Senior Research Fellow en IOHK, a cargo del desarrollo de Cardano, y se especializa en técnicas de verificación. Como parte del trabajo, se buscaran las propiedades a verificar sobre los contratos, algunas de ellas derivan directamente de la especificación formal definida por el estándar ACTUS\footnote{\href{https://www.actusfrf.org/techspecs}{https://www.actusfrf.org/techspecs}}, mientras que otras resultan mas abstractas o generales. Las pruebas se escribirán a través del asistente de pruebas Isabelle/HOL. Los contratos serán desarrollados en Marlowe (un lenguaje construido sobre Plutus) y también se integrarán al Marlowe Playground en la web, para permitir la generación automática del código Marlowe a partir de la definición de las condiciones de contrato. %Todo el código generado tendrá licencia de software libre Apache 2.0, mientras que los restantes componentes de la investigación (traducción de la especificación ACTUS a Marlowe, y las pruebas de verificación formal) quedarán publicadas en la tesis.
 
 %En cuanto a los tipos de contratos, en esta tesis se estudiarán los contratos financieros, para los cuales existe el proyecto ACTUS\footnote{\href{https://www.actusfrf.org/}{https://www.actusfrf.org/}}, cuyo objetivo es definir una taxonomía, o clasificación, de todos los contratos financieros en un número pequeño de grupos.
 
@@ -99,7 +99,7 @@ El trabajo contará con la codirección del profesor Simon Thompson (Kent Univer
 %interés computacional (para nosotros)
 
 %en este trabajo...
-%- Cardano, Plutus, Haskell. Focalizar financieros, ACTUS (estándar que modela contratos financieros, taxonomia, ej..). Especificación 
+%- Cardano, Plutus, Haskell. Focalizar financieros, ACTUS (estándar que modela contratos financieros, taxonomía, ej..). Especificación 
 
 
 %Se buscará ¿validar/verificar? los diferentes tipos de grupos que define el estándar ACTUS, mediante técnicas de verificación formal...
@@ -112,7 +112,7 @@ El trabajo contará con la codirección del profesor Simon Thompson (Kent Univer
 
 Actualmente, varias de las blockchains existentes soportan contratos inteligentes, tales como Ethereum, Steller, EOS y Cardano. Ethereum es la primer plataforma para contratos inteligentes, y permanece como la opción más popular para los desarrolladores. La plataforma se lanzó al público en 2015 y ahora soporta y facilita el desarrollo de aplicaciones desde \textit{``Initial Coin Offering''} hasta seguros basados en smart contracts.
 
-Como se señala en~\cite{9152791}, los smart contracts, así como otros sistemas en que la seguridad es crítica (por ejemplo, controladores en autos y aviones), deben ser formalmente verificados antes de su despliegue. Si bien esta observación no es reciente, solo un puñado de proyectos de smarts contracts (por ejemplo, MakerDAO\footnote{Formal verification of multicollateral dai, 2019, [online] Disponible en: \href{https://github.com/dapphub/k-dss/.}{https://github.com/dapphub/k-dss/.}}) se han verificado formalmente hasta ahora. Los esfuerzos de verificación actuales se llevan a cabo utilizando verificadores de teoremas interactivos, como Isabelle/HOL. Esto requiere de un esfuerzo manual y experiencia. Un antecedente que encontramos es~\cite{bhargavan:hal-01400469}, en donde se analizan y verifican algunos contratos simples redactados en Solidity y compilados en bytecode de EVM. Para ello, se traduce dicho bytecode a F* (un lenguaje de programación funcional, inspirado por ML y que tiene como objetivo la verificación de programas)
+Como se señala en~\cite{9152791}, los smart contracts, así como otros sistemas en que la seguridad es crítica (por ejemplo, controladores en autos y aviones), deben ser formalmente verificados antes de su despliegue. Si bien esta observación no es reciente, solo un puñado de proyectos de smarts contracts (por ejemplo, MakerDAO\footnote{Formal verification of multicollateral dai, 2019, [online] Disponible en: \href{https://github.com/dapphub/k-dss/.}{https://github.com/dapphub/k-dss/.}}) se han verificado formalmente hasta ahora. Los esfuerzos de verificación actuales se llevan a cabo utilizando verificadores de teoremas interactivos, como Isabelle/HOL. Esto\@requiere de un esfuerzo manual y experiencia. Un antecedente que encontramos es~\cite{bhargavan:hal-01400469}, en donde se analizan y verifican algunos contratos simples redactados en Solidity y compilados en bytecode de EVM. Para\@ello, se traduce dicho bytecode a F* (un lenguaje de programación funcional, inspirado por ML y que tiene como objetivo la verificación de programas)
 % ¿Hay otras plataformas para contratos inteligentes?
 % ¿En esas otras plataformas hay alguna forma de verificar?
 
@@ -126,7 +126,7 @@ Cardano se encuentra actualmente integrando las funcionalidades de smart contrac
     \item Era Voltaire: Gobernanza.
 \end{enumerate}
 
-La era Goguen también abarca el trabajo para hacer que Cardano sea accesible a un público más amplio a través de \textit{Marlowe}\footnote{\href{https://alpha.marlowe.iohkdev.io/#/}{https://alpha.marlowe.iohkdev.io}}, un nuevo lenguaje de dominio específico para escribir Smart Contracts financieros en Cardano. Marlowe permite que los contratos sean escritos en un lenguaje financiero, en lugar de usar lenguajes de propósito general para blockchain, si bien el código que genera es código Haskell. Actualmente se encuentra aún en desarrollo. Cuando esté en funcionamiento, las organizaciones podrán escribir sus propios contratos o descargar los contratos ya realizados de los repositorios y transferir activos conforme las condiciones pactadas.
+La era Goguen también abarca el trabajo para hacer que Cardano sea accesible a un público más amplio a través de Marlowe~\footnote{\href{https://alpha.marlowe.iohkdev.io/}{https://alpha.marlowe.iohkdev.io/}}, un nuevo lenguaje de dominio específico para escribir Smart Contracts financieros en Cardano. Marlowe permite que los contratos sean escritos en un lenguaje financiero, en lugar de usar lenguajes de propósito general para blockchain, si bien el código que genera es código Haskell. Actualmente se encuentra aún en desarrollo. Cuando esté en funcionamiento, las organizaciones podrán escribir sus propios contratos o descargar los contratos ya realizados de los repositorios y transferir activos conforme las condiciones pactadas.
 
 Actualmente los contratos Marlowe pueden ser escritos directamente en Haskell, en Javascript, o a través de la semántica introducida por Marlowe, y pueden ser visualizados usando el Marlowe Playground, donde también es posible simularlos y analizarlos. En los próximos meses finalizará la implementación de Marlowe en Cardano, y de esa forma los contratos se ejecutarán directamente en la Blockchain.
 
@@ -142,8 +142,8 @@ El trabajo realizado hasta la fecha relativo a verificación de contratos en Mar
 \end{itemize}
 
 %Efficient static analysis
-En~\cite{10.1007/978-3-030-61467-6_11} se propusieron algunas optimizaciones (basadas en la sintaxis específica en Haskell de los contratos generados por Marlowe) para hacer más eficiente el análisis estático con la biblioteca SBV. SBV es una herramienta que permite expresar propiedades a verificar sobre funciones en Haskell, y realiza su conversión a lenguaje simbólico para que sean probadas por un SMT solver (en el caso de este trabajo, Z3). Para analizar la performance de las optimizaciones, se armó un benchmark con contratos financieros de tipo \textit{Auction}, \textit{Crowdfunding}, \textit{Rent} y \textit{Coupon Bond} y se encontró que las optimizaciones mejoraban significativamente los tiempos de prueba de los contratos.
-%Los archivos .thy estan aca: \href{https://github.com/input-output-hk/marlowe/tree/master/isabelle}{https://github.com/input-output-hk/marlowe/tree/master/isabelle}
+En~\cite{10.1007/978-3-030-61467-6_11} se propusieron algunas optimizaciones (basadas en la sintaxis específica en Haskell de los contratos generados por Marlowe) para hacer más eficiente el análisis estático con la biblioteca SBV.\@SBV\@es una herramienta que permite expresar propiedades a verificar sobre funciones en Haskell, y realiza su conversión a lenguaje simbólico para que sean probadas por un SMT solver (en el caso de este trabajo, Z3). Para analizar la performance de las optimizaciones, se armó un benchmark con contratos financieros de tipo \textit{Auction}, \textit{Crowdfunding}, \textit{Rent} y \textit{Coupon Bond} y se encontró que las optimizaciones mejoraban significativamente los tiempos de prueba de los contratos.
+%Los archivos .thy están aca: \href{https://github.com/input-output-hk/marlowe/tree/master/isabelle}{https://github.com/input-output-hk/marlowe/tree/master/isabelle}
 
 Por otra parte, en~\cite{kondratiukstandardized} se presentan algunos lineamientos sobre la verificación de un contrato en especifico definido por el estándar ACTUS. Se explora también un framework para la construcción de criptomonedas estandarizadas utilizando Marlowe y con el estándar ACTUS como base. También se profundiza en las formas en que los contratos descritos en ACTUS pueden definirse en Marlowe, Plutus y Haskell. Por supuesto, Plutus o Haskell pueden expresar estos contratos, pero representarlos en Marlowe trae ventajas adicionales. Marlowe se define para proporcionar garantías por diseño: un contrato de Marlowe sólo hará un número finito de interacciones con su entorno, y su vida útil puede leerse en el código de un contrato; además, cuando finalice el contrato, todos los activos mantenidos por el contrato se devolverán automáticamente a los participantes. Ninguna de estas garantías puede ser proporcionada por un lenguaje de propósito general.
 
@@ -151,8 +151,8 @@ Con respecto a las técnicas de validación y verificación de smart contracts, 
 
 %En~\cite{10.1007/978-3-030-03427-6_27} ( Marlowe:Financial contracts on blockchain.  In Margaria, T. and Steffen, B., editors,Leveraging Ap-plications of Formal M)...\\
 
-%Parrafos de la cita~\cite{10.1007/978-3-030-03427-6_27} que podrían  coincidir con nuestro trabajo: "\textit{We plan to continue the work with Marlowe in a number of directions. We will continue to develop the core language, for example considering the automation of generation of identifiers for commitments and others. We will then implement this version of Marlowe in Cardano, compiling from Marlowe contracts to on chain contracts and users’ wallets, and deploy it in a test network to observe and measure its behaviour in practice.
-%Building on the operational semantics given here, we will develop analyses of Marlowe contracts – such as to show that contracts cannot generate FailedPay actions in certain circumstances. We will also develop QuickCheck-style propertybased testing [4], and properties developed here can become candidates for fully fledged verification in a formalisation of the semantics of Marlowe.}"
+%Párrafos de la cita~\cite{10.1007/978-3-030-03427-6_27} que podrían  coincidir con nuestro trabajo: "\textit{We plan to continue the work with Marlowe in a number of directions. We will continue to develop the core language, for example considering the automation of generation of identifiers for commitments and others. We will then implement this version of Marlowe in Cardano, compiling from Marlowe contracts to on chain contracts and users’ wallets, and deploy it in a test network to observe and measure its behavior in practice.
+%Building on the operational semantics given here, we will develop analyses of Marlowe contracts – such as to show that contracts cannot generate FailedPay actions in certain circumstances. We will also develop QuickCheck-style property-based testing [4], and properties developed here can become candidates for fully fledged verification in a formalization of the semantics of Marlowe.}"
 
 %\boxed{
 %\text{Citar otros trabajos también: https://www.coinresear.ch/papers/smart-contracts}}
@@ -171,8 +171,8 @@ Los objetivos particulares son:
 
 \begin{enumerate}
     \item Diseñar un mecanismo de traducción de la especificación formal de ACTUS a código en Marlowe.
-    \item Verificar los contratos escritos en Marlowe utilizando el asistente de pruebas Isabelle/HOL.
-    \item Incorporar los contratos diseñados a la plataforma Actus Labs, de manera que los contratos puedan generarse en forma interactiva desde el sitio web, obteniendo directamente el código a partir de un diseño por bloques.%\item Contribuir con el desarrollo de Cardano en lo que hace a la hoja de ruta, en la parte de contratos inteligentes.
+    \item Verificar los contratos escritos en Marlowe utilizando el asistente de pruebas Isabelle/HOL.\@
+    \item Incorporar los contratos diseñados a la plataforma ACTUS Labs, de manera que los contratos puedan generarse en forma interactiva desde el sitio web, obteniendo directamente el código a partir de un diseño por bloques.%\item Contribuir con el desarrollo de Cardano en lo que hace a la hoja de ruta, en la parte de contratos inteligentes.
 \end{enumerate}
 
 \bigskip
@@ -207,7 +207,7 @@ Los objetivos particulares son:
 %\bigskip
 
 %##########################
-% PLANIFICACION
+% PLANIFICACIÓN
 %##########################
 
 \section{Cronograma de trabajo}
@@ -243,17 +243,17 @@ La tesis tiene una carga de trabajo estimada de 750 horas, a las que se suman 12
     \item Plutus Pioneers Program [120 horas]: Se tomará este curso brindado por Cardano Developers, con duración de 2 meses, para entrenar desarrolladores en Plutus para el ecosistema Cardano.
     \item Desarrollo [450 horas]: 
     \begin{itemize}
-    % \item Traducción de la especificación formal de los contratos Actus seleccionados a Marlowe. [100 horas]
-    \item Escritura y ejecución de las pruebas de validación para plantillas (contratos con algunas variables cuyos valores quedan a definir por el usuario) de cada tipo de contrato con Isabelle/HOL. [300 horas]. Esta tarea se divide en las siguientes subtareas:
+    % \item Traducción de la especificación formal de los contratos ACTUS seleccionados a Marlowe. [100 horas]
+    \item Escritura y ejecución de las pruebas de validación para plantillas (contratos con algunas variables cuyos valores quedan a definir por el usuario) de cada tipo de contrato con Isabelle/HOL.\@[300 horas]. Esta tarea se divide en las siguientes sub-tareas:
     \begin{itemize}
-    \item Estudiar la representación de los contratos en el estandar ACTUS.
+    \item Estudiar la representación de los contratos en el estÁndar ACTUS.\@
     \item Diseñar una metodología general para traducir los contratos ACTUS a Marlowe.
     \item Implementar los contratos seleccionados en Marlowe.
     \item Definir las propiedades a validar.
     \item Escribir pruebas de validación en Isabelle/HOL y verificar que los contratos generales (es decir, sin asignar a las variables valores específicos) pasen todas las pruebas. 
     \end{itemize}
     
-    \item Incorporación de los contratos a la plataforma interactiva Actus Labs. [150 horas]
+    \item Incorporación de los contratos a la plataforma interactiva ACTUS Labs. [150 horas]
     \end{itemize}
 \item Redacción de manuscrito de tesis [180 horas].%: Redacción sobre el trabajo, análisis y conclusiones desarrolladas.
 
