Smart contracts y proof of stake

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -174,12 +174,31 @@
   note   = {Accessed: 2015-07-01},
   url    = {https://bitcoin.org/bitcoin.pdf}
 }
+@incollection{pof_ouroboros,
+  author     = {Aggelos Kiayias and Alexander Russell and Bernardo David and Roman Oliynykov},
+  address    = {Cham},
+  title      = {Ouroboros: {A} {Provably} {Secure} {Proof}-of-{Stake} {Blockchain} {Protocol}},
+  volume     = {10401},
+  isbn       = {978-3-319-63687-0 978-3-319-63688-7},
+  shorttitle = {Ouroboros},
+  url        = {http://link.springer.com/10.1007/978-3-319-63688-7_12},
+  abstract   = {We present {\textquotedblleft}Ouroboros,{\textquotedblright} the first blockchain protocol based on proof of stake with rigorous security guarantees. We establish security properties for the protocol comparable to those achieved by the bitcoin blockchain protocol. As the protocol provides a {\textquotedblleft}proof of stake{\textquotedblright} blockchain discipline, it offers qualitative efficiency advantages over blockchains based on proof of physical resources (e.g., proof of work). We also present a novel reward mechanism for incentivizing proof of stake protocols and we prove that, given this mechanism, honest behavior is an approximate Nash equilibrium, thus neutralizing attacks such as selfish mining. We also present initial evidence of the practicality of our protocol in real world settings by providing experimental results on transaction confirmation and processing.},
+  language   = {en},
+  urldate    = {2020-07-08},
+  booktitle  = {Advances in {Cryptology} {\textendash} {CRYPTO} 2017},
+  publisher  = {Springer International Publishing},
+  year       = {2017},
+  doi        = {10.1007/978-3-319-63688-7_12},
+  note       = {Series Title: Lecture Notes in Computer Science},
+  pages      = {357--388}
+}
 @inproceedings{standardized_crypto_loans,
   title     = {Standardized crypto-loans on the Cardano blockchain},
   author    = {Kondratiuk, Dmytro and Seijas, Pablo Lamela and Nemish, Alexander and Thompson, Simon},
   booktitle = {5th Workshop on Trusted Smart Contracts, Financial Cryptography and Data Security 2021},
   year      = {2021}
 }
+
 @inbook{The_Extended_UTXO_Model,
   author = {Chakravarty, Manuel and Chapman, James and MacKenzie, Kenneth and Melkonian, Orestis and Jones, Michael and Wadler, Philip},
   year   = {2020},
@@ -197,8 +216,7 @@
   year         = {2018},
   note         = {\url{https://ia.cr/2018/262}}
 }
-
-@article{UTxO,
+@article{UTxO_Lars,
   author     = {Lars Br{\"{u}}njes and
                 Murdoch James Gabbay},
   title      = {UTxO- vs account-based smart contract blockchain programming paradigms},
@@ -211,4 +229,10 @@
   timestamp  = {Thu, 02 Apr 2020 15:34:08 +0200},
   biburl     = {https://dblp.org/rec/journals/corr/abs-2003-14271.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
+}
+@book{fowler2010dsl,
+  title     = {Domain-specific languages},
+  author    = {Fowler, Martin},
+  year      = {2010},
+  publisher = {Pearson Education}
 }
